# Rocksmith2014.rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  explore_output.txt
.github/: copilot-instructions.md
.github/workflows/: build_linux.yml  build_macos.yml  build_release.yml  build_windows.yml  lint.yml  test.yml  tests.yml  tests_dotnet.yml
rocksmith2014-audio/: Cargo.toml
rocksmith2014-audio/src/: conversion.rs  error.rs  fader.rs  iir_filter.rs  lib.rs  lufs_meter.rs  preview.rs  utils.rs  volume.rs
rocksmith2014-audio/src/wwise/: finder.rs  mod.rs
rocksmith2014-common/: Cargo.toml
rocksmith2014-common/src/: binary_readers.rs  binary_writers.rs  compression.rs  json_options.rs  lib.rs  memory_stream_pool.rs  platform.rs  random_generator.rs  tone_descriptor.rs  types.rs
rocksmith2014-common/src/manifest/: arrangement_properties.rs  attributes.rs  chord_template.rs  manifest.rs  mod.rs  phrase.rs  phrase_iteration.rs  section.rs  tone.rs  tuning.rs
rocksmith2014-common/src/profile/: mod.rs
rocksmith2014-conversion/: Cargo.toml
rocksmith2014-conversion/src/: accu_data.rs  convert_vocals.rs  lib.rs  sng_to_xml.rs  utils.rs  xml_to_sng.rs  xml_to_sng_level.rs  xml_to_sng_note.rs
rocksmith2014-dd/: Cargo.toml
rocksmith2014-dd-model/: Cargo.toml
rocksmith2014-dd-model/model/: MLModel.onnx
rocksmith2014-dd-model/src/: consume_model.rs  lib.rs  model_input.rs  model_output.rs  onnx_runtime.rs
rocksmith2014-dd/src/: anchor_chooser.rs  comparers.rs  entity_chooser.rs  generator.rs  hand_shape_chooser.rs  level_gen.rs  lib.rs  types.rs  utils.rs
rocksmith2014-dlcproject/: Cargo.toml
rocksmith2014-dlcproject/src/: arrangement.rs  dlc_key.rs  dlc_project.rs  lib.rs  phrase_level_comparer.rs  string_validator.rs  utils.rs
rocksmith2014-eof/: Cargo.toml
rocksmith2014-eof/src/: beat_writer.rs  eof_project_writer.rs  event_converter.rs  hand_shapes.rs  helpers.rs  ini_writers.rs  lib.rs  note_converter.rs  pro_guitar_writer.rs  tech_notes.rs  tremolo.rs  types.rs  vocals_writer.rs  write_utils.rs  writer.rs
rocksmith2014-ffi/: Cargo.toml
rocksmith2014-ffi/src/: lib.rs  main.rs
rocksmith2014-fsharp-extensions/: Cargo.toml
rocksmith2014-fsharp-extensions/src/: array_ext.rs  file_ext.rs  lib.rs  option_ext.rs  string_ext.rs  vec_ext.rs
rocksmith2014-psarc/: Cargo.toml
rocksmith2014-psarc/src/: archive.rs  crypto.rs  entry.rs  error.rs  header.rs  lib.rs
rocksmith2014-psarc/tests/: dotnet_parity_tests.rs  (+1 more)
rocksmith2014-sng/: Cargo.toml
rocksmith2014-xml/: Cargo.toml
rocksmith2014-xml-extension/: Cargo.toml
rocksmith2014-xml-processing/: Cargo.toml
rocksmith2014-xml-processing/src/: checker.rs  eof_fixes.rs  improver.rs  issue.rs  lib.rs  phrase_gen.rs  phrase_mover.rs  show_lights_checker.rs  vocals_checker.rs
rocksmith2014-xml-processing/src/checkers/: checker.rs  mod.rs  show_lights_checker.rs  vocals_checker.rs
rocksmith2014-xml-processing/src/improvers/: custom_events.rs  double_stop_name_remover.rs  eof_fixes.rs  handshape_adjuster.rs  improver.rs  mod.rs  phrase_gen.rs  phrase_mover.rs
src/: error.rs  ffi.rs  lib.rs
src/sng/: mod.rs  (+1 more)
tests/: check_song_notes_against_dotnet.sh  common_tests.rs  integration_test.rs  psarc_tests.rs  sng_tests.rs  xml_types_tests.rs
tests/Rocksmith2014.Audio.Tests/: Cargo.toml  ConversionTests.rs  DlcNotesReportTests.rs  DlcWemLengthTests.rs  PreviewTests.rs  VolumeTests.rs  WwiseTests.rs  conversion_tests.rs  utils_tests.rs  wwise_tests.rs
tests/Rocksmith2014.Audio.Tests/tests/: audio_tests.rs
tests/Rocksmith2014.Common.Tests/: BigEndianBinaryReadWrite.rs  Cargo.toml  LittleEndianBinaryReadWrite.rs  PlatformTests.rs  SlowStreamTests.rs  ToneDescriptorTests.rs  ToneTests.rs
tests/Rocksmith2014.Common.Tests/tests/: BigEndianBinaryReadWrite.rs  LittleEndianBinaryReadWrite.rs  ToneTests.rs  platform_tests.rs
tests/Rocksmith2014.Conversion.Tests/: Cargo.toml
tests/Rocksmith2014.Conversion.Tests/src/: lib.rs
tests/Rocksmith2014.Conversion.Tests/tests/: InstrumentalConversion.rs  SngFilesToXml.rs  SngObjectsToXmlTests.rs  VocalsConversion.rs  XmlFilesToSng.rs  XmlObjectsToSngTests.rs  conversion_tests.rs
tests/Rocksmith2014.DD.Tests/: AnchorChooserTests.rs  Cargo.toml  ComparerTests.rs  GeneratorTests.rs  HandShapeChooserTests.rs
tests/Rocksmith2014.DD.Tests/tests/: generator_tests.rs
tests/Rocksmith2014.DLCProject.Tests/: AggregateGraphTests.rs  ArrangementTests.rs  AttributesTechniquesTests.rs  AttributesTests.rs  Cargo.toml  DLCKeyTests.rs  DLCProjectTests.rs  ManifestTests.rs  PhraseLevelComparerTests.rs  ShowlightGeneratorTests.rs  SoundBankTests.rs  StringValidatorTests.rs  ToolkitImportTests.rs  UtilsTests.rs  XblockTests.rs  phrase_level_comparer_tests.rs
tests/Rocksmith2014.SNG.Tests/: BinaryHelpersTests.rs  Cargo.toml  README.md  ReadWriteUnpacked.rs  RoundTripTests.rs  binary_helpers_tests.rs  read_write_packed.rs  read_write_unpacked.rs
tests/Rocksmith2014.SNG.Tests/tests/: read_write_packed.rs  round_trip_tests.rs  sng_tests.rs
tests/Rocksmith2014.XML.Processing.Tests/: Cargo.toml  PhraseGeneratorTests.rs  ShowLightsCheckerTests.rs  UtilsTests.rs  VocalsCheckerTests.rs
tests/Rocksmith2014.XML.Processing.Tests/ArrangementImprover/: ArrangementImproverTests.rs  BasicFixTests.rs  ChordRenamingTests.rs  EOFFixTests.rs  HandshapeAdjusterTests.rs  PhraseMoverTests.rs
tests/Rocksmith2014.XML.Processing.Tests/Checkers/: ShowLightsCheckerTests.rs  VocalsCheckerTests.rs
tests/Rocksmith2014.XML.Processing.Tests/Improvers/: PhraseGeneratorTests.rs
tests/Rocksmith2014.XML.Processing.Tests/InstrumentalChecker/: ChordTests.rs  MiscTests.rs  NoteTests.rs
tests/Rocksmith2014.XML.Processing.Tests/tests/: checker_tests.rs
tests/Rocksmith2014.XML.Tests/: AnchorTests.rs  Cargo.toml  ChordTests.rs  HandShapeTests.rs  InstrumentalArrangementTests.rs  README.md  ShowLightTests.rs  UtilsTest.rs  VocalTests.rs  meta_data_tests.rs  show_light_tests.rs
tests/Rocksmith2014.XML.Tests/tests/: note_tests.rs  utils_tests.rs  vocal_tests.rs  xml_file_tests.rs  xml_tests.rs
(+101 files in other folders)
