[package]
name = "rocksmith2014-common"
version = "0.1.0"
edition = "2021"
description = "Common types and utilities shared across Rocksmith 2014 crates"
license = "MIT"

[dependencies]
flate2 = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
aes = "0.8"
