[package]
name = "rocksmith2014-ffi"
version = "0.1.0"
edition = "2021"
description = "CLI shim for Rust/.NET note-parity comparison"
publish = false

[[bin]]
name = "rocksmith2014-ffi"
path = "src/main.rs"

[dependencies]
rocksmith2014-psarc = { path = "../rocksmith2014-psarc" }
rocksmith2014-xml = { path = "../rocksmith2014-xml" }
