[package]
name = "rocksmith2014-audio-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
rocksmith2014-audio = { path = "../../rocksmith2014-audio" }

[[test]]
name = "utils_tests"
path = "utils_tests.rs"

[[test]]
name = "volume_tests"
path = "volume_tests.rs"

[[test]]
name = "preview_tests"
path = "preview_tests.rs"

[[test]]
name = "conversion_tests"
path = "conversion_tests.rs"

[[test]]
name = "wwise_tests"
path = "wwise_tests.rs"
