[package]
name = "rocksmith2014-audio-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
rocksmith2014-audio = { path = "../../rocksmith2014-audio" }
rocksmith2014-psarc = { path = "../../rocksmith2014-psarc" }
rocksmith2014-xml = { path = "../../rocksmith2014-xml" }
tempfile = "3"
hound = "3.5.1"

[[test]]
name = "UtilsTests"
path = "UtilsTests.rs"

[[test]]
name = "VolumeTests"
path = "VolumeTests.rs"

[[test]]
name = "PreviewTests"
path = "PreviewTests.rs"

[[test]]
name = "ConversionTests"
path = "ConversionTests.rs"

[[test]]
name = "WwiseTests"
path = "WwiseTests.rs"

[[test]]
name = "DlcWemLengthTests"
path = "DlcWemLengthTests.rs"

[[test]]
name = "DlcNotesReportTests"
path = "DlcNotesReportTests.rs"
