[package]
name = "rocksmith2014-dd-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
rocksmith2014-dd = { path = "../../rocksmith2014-dd" }
rocksmith2014-xml = { path = "../../rocksmith2014-xml" }
rocksmith2014-xml-extension = { path = "../../rocksmith2014-xml-extension" }

[[test]]
name = "AnchorChooserTests"
path = "AnchorChooserTests.rs"

[[test]]
name = "ComparerTests"
path = "ComparerTests.rs"

[[test]]
name = "GeneratorTests"
path = "GeneratorTests.rs"

[[test]]
name = "HandShapeChooserTests"
path = "HandShapeChooserTests.rs"
