[package]
name = "rocksmith2014-dlcproject-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
rocksmith2014-dlcproject = { path = "../../rocksmith2014-dlcproject" }
rocksmith2014-sng = { path = "../../rocksmith2014-sng" }
uuid = { version = "1", features = ["v4"] }

[[test]]
name = "StringValidatorTests"
path = "StringValidatorTests.rs"

[[test]]
name = "DLCKeyTests"
path = "DLCKeyTests.rs"

[[test]]
name = "UtilsTests"
path = "UtilsTests.rs"

[[test]]
name = "PhraseLevelComparerTests"
path = "PhraseLevelComparerTests.rs"

[[test]]
name = "AggregateGraphTests"
path = "AggregateGraphTests.rs"

[[test]]
name = "ArrangementTests"
path = "ArrangementTests.rs"

[[test]]
name = "AttributesTechniquesTests"
path = "AttributesTechniquesTests.rs"

[[test]]
name = "AttributesTests"
path = "AttributesTests.rs"

[[test]]
name = "DLCProjectTests"
path = "DLCProjectTests.rs"

[[test]]
name = "ManifestTests"
path = "ManifestTests.rs"

[[test]]
name = "ShowlightGeneratorTests"
path = "ShowlightGeneratorTests.rs"

[[test]]
name = "SoundBankTests"
path = "SoundBankTests.rs"

[[test]]
name = "ToolkitImportTests"
path = "ToolkitImportTests.rs"

[[test]]
name = "XblockTests"
path = "XblockTests.rs"
