[package]
name = "rocksmith2014-xml-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
rocksmith2014-xml = { path = "../../rocksmith2014-xml" }

[[test]]
name = "anchor_tests"
path = "anchor_tests.rs"

[[test]]
name = "chord_tests"
path = "chord_tests.rs"

[[test]]
name = "hand_shape_tests"
path = "hand_shape_tests.rs"

[[test]]
name = "instrumental_arrangement_tests"
path = "instrumental_arrangement_tests.rs"

[[test]]
name = "meta_data_tests"
path = "meta_data_tests.rs"

[[test]]
name = "note_tests"
path = "note_tests.rs"

[[test]]
name = "show_light_tests"
path = "show_light_tests.rs"

[[test]]
name = "utils_tests"
path = "utils_tests.rs"

[[test]]
name = "vocal_tests"
path = "vocal_tests.rs"
